--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -18,8 +18,9 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ site.title }}</h1>
       <h2 class="project-tagline">{{ site.description }}</h2>
-      <a href="{{ site.dataset.train_url }}" class="btn">Download train.tar.gz</a>
-      <a href="{{ site.dataset.test_url }}" class="btn">Download test.tar.gz</a>
+      <a href="{{ site.dataset.train_url }}" class="btn">Train set</a>
+      <a href="{{ site.dataset.val_url }}" class="btn">Val set</a>
+      <a href="{{ site.dataset.test_url }}" class="btn">Test set</a>
     </header>
 
     <main id="content" class="main-content" role="main">
